--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -42,8 +42,9 @@
 							end;
 						</event>
 					</checkBox>
-					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" backgroundColor="#333333" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
-					<textEditor name="historiaMerda" align="client" field="historia.texto" class="transparente" margins="{top=2}" fontSize="16" visible="true"/>
+					<richEdit name="historiaFancy" align="client" field="historia.texto2" backgroundColor="#333333" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true"
+					 margins="{top=2}" visible="false"/>
+					<textEditor name="historiaMerda" align="client" field="historia.texto" class="transparente vcenter" margins="{top=2}" fontSize="16" visible="true"/>
 			</rectangle>
 		</tab>
 
@@ -67,7 +68,7 @@
 				</checkBox>
 				<richEdit name="companionanotacoesFancy" align="client" backgroundColor="#333333" defaultFontColor="white" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" 
 				margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
-				<textEditor name="companionanotacoesMerda" align="client" field="companion.anotacoes" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
+				<textEditor name="companionanotacoesMerda" align="client" field="companion.anotacoes" class="transparente vcenter" margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
 			</rectangle>
 		</tab>
 
@@ -81,8 +82,9 @@
 						end;
 					</event>
 				</checkBox>
-				<richEdit name="anotacoesFancy" align="client" backgroundColor="#333333" defaultFontColor="white" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
-				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
+				<richEdit name="anotacoesFancy" align="client" backgroundColor="#333333" defaultFontColor="white" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true"
+				 margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
+				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes" class="transparente vcenter" margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
 			</rectangle>
 		</tab>
 
