--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -107,7 +107,7 @@
 						else
 							local jogador = Firecast.getPersonagemDe(sheet).dono;
 							if common.isMyChar(sheet) and common.isMainChar(sheet) then 
-								if sheet.valCur ~= sheet.valPrev or sheet.valCur ~= sheet.valPrev and sheet.valMax ~= sheet.valMaxPrev or sheet.valMax ~= sheet.valMaxPrev then
+								if sheet.valCur ~= sheet.valPrev or sheet.valMax ~= sheet.valMaxPrev then
 									jogador:requestSetBarValue(bar, sheet.valCur, sheet.valMax);
 								else 
 									local curBar, maxBar = jogador:getBarValue(bar);
