--- a/action.lfm
+++ b/action.lfm
@@ -1,4 +1,4 @@
 <form name="action">
-<flowPart frameStyle="">
+<flowPart name="action_Frame" frameStyle="frames/panel3transp/frame2.xml" minWidth="320" maxWidth="1600"> 
 </flowPart>
 </form>
